syntax = "proto3";

package protos;

option go_package="github.com/bhuvana-chinnadurai/users-service";

import "google/protobuf/wrappers.proto";
/*

{
    "id": "d2a7924e-765f-4949-bc4c-219c956d0f8b",
    "first_name": "Alice",
    "last_name": "Bob",
    "nickname": "AB123",
    "password": "supersecurepassword",
    "email": "alice@bob.com",
    "country": "UK",
    "created_at": "2019-10-12T07:20:50.52Z",
    "updated_at":

*/
message CreateUserRequest{
    string first_name = 1;
    string last_name = 2;
    //Nickname is optional
    google.protobuf.StringValue nickname = 3; 
    string password =4;
    string email = 5;
    string country = 6;
}

message CreateUserResponse {
    string id = 1;
}

service Users {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
}
